unpackaged/main/default/objects/Account/fields/First_Contact__c.field-meta.xml
<CustomField>
    <fullName>First_Contact__c</fullName>
    <description>Time of first phone call</description>
    <label>First Contact</label>
    <type>Date</type>
</CustomField>