unpackaged/main/default/objects/Account/fields/Latest_Contact__c.field-meta.xml
<CustomField>
    <fullName>Latest_Contact__c</fullName>
    <description>Last date for phone call</description>
    <label>Latest Contact</label>
    <type>Date</type>
</CustomField>