unpackaged/main/default/objects/Account/fields/New_Data_on_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Data_on_Account__c</fullName>
    <label>New Data on Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>