unpackaged/main/default/objects/Account/fields/New_Field_on_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Field_on_Account__c</fullName>
    <label>New Field on Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>