unpackaged/main/default/objects/Account/fields/Super_Important_Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Super_Important_Account_Info__c</fullName>
    <label>Super Important Account Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>